Cambiando los productos

--- a/MvcTienda_prueba/MvcTienda/Views/Home/Index.cshtml
+++ b/MvcTienda_prueba/MvcTienda/Views/Home/Index.cshtml
@@ -3,12 +3,15 @@
 }
 
 <head>
-<link rel="stylesheet" href="~/css/Fondo.css" />
+<link rel="stylesheet" href="~/css/color.css" />
 </head>
 
-<body style="background-color: #1f1f1f">
-    <div class="text-center py-5">
-    <h1 class="display-1 text-danger mb-4">¡Bienvenido!</h1>
-    <p class="lead text-white">JUGADORES</p>
+<body style="background-color: #717D7E ">
+   
+    <div class="text-center py-1">
+        <h1 class="display-1 text-white mb-4">Sobre nosotros</h1>
+        <p class="lead text-white">Somos una empresa que vendemos prototipos a empresas de videojuegos</p>
+        <img src="~/imagenes/logo.png" alt="flyeden">
     </div>
+
 </body>  
