--- a/MvcTienda_prueba/MvcTienda/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/MvcTienda_prueba/MvcTienda/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -9,8 +9,8 @@
     if (@Model.DisplayConfirmAccountLink)
     {
 <p>
-            Esta aplicación no tiene actualmente un remitente de correo electrónico real registrado, se <a href="https://aka.ms/aspaccountconf">these docs</a> 
-            para saber cómo configurar un remitente de correo electrónico real. <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
+            Esta aplicación no tiene actualmente un remitente de correo electrónico real registrado, se <a href="https://aka.ms/aspaccountconf">these docs</a>
+            para saber cómo configurar un remitente de correo electrónico real. <a id="confirm-link" href="@Model.EmailConfirmationUrl">Haga clic aquí para confirmar su cuenta</a>
 </p>
     }
     else
