--- a/MvcTienda_prueba/MvcTienda/Areas/Identity/Pages/Error.cshtml
+++ b/MvcTienda_prueba/MvcTienda/Areas/Identity/Pages/Error.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2 class="text-danger">Se ha producido un error al procesar su solicitud.</h2>
 
 @if (Model.ShowRequestId)
 {
@@ -16,8 +16,8 @@
 
 <h3>Development Mode</h3>
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
+    Cambio a <strong>Desarrollo</strong> mostrará información más detallada sobre el error que se ha producido.
 </p>
 <p>
-    <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
+    <strong>El entorno de desarrollo no debe estar habilitado en las aplicaciones desplegadas</strong>, ya que puede dar lugar a que se muestre información sensible de las excepciones a los usuarios finales. Para la depuración local, se puede habilitar el entorno de desarrollo configurando el parámetro <strong>ENTORNO_ASPNETCORE</strong> a la variable de entorno <strong>Desarrollo</strong>, y reiniciar la aplicación.
 </p>
