--- a/MvcTienda_prueba/MvcTienda/Views/Home/Privacy.cshtml
+++ b/MvcTienda_prueba/MvcTienda/Views/Home/Privacy.cshtml
@@ -3,4 +3,13 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Utilice esta página para detallar la política de privacidad de su sitio web.</p>
+
+<head>
+    <link rel="stylesheet" href="~/css/Fondo.css" />
+</head>
+
+<body style="background-color: #717D7E ">
+    <p>Utilice esta página para detallar la política de privacidad de su sitio web.</p>
+
+</body>
+
