--- a/MvcTienda_prueba/MvcTienda/Views/Categorias/Create.cshtml
+++ b/MvcTienda_prueba/MvcTienda/Views/Categorias/Create.cshtml
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Vueleve a la lista</a>
+    <a asp-action="Index">Vuelve a la lista</a>
 </div>
 
 @section Scripts {
