--- a/MvcTienda_prueba/MvcTienda/Views/Shared/_Layout.cshtml
+++ b/MvcTienda_prueba/MvcTienda/Views/Shared/_Layout.cshtml
@@ -100,8 +100,12 @@
 
     <footer class="border-top footer text-muted redes">
         <div class="container">
-            &copy; 2023 - Flyeden Games - <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de privacidad</a>
+            &copy; 2023 - Flyeden Games - <a asp-area="" asp-controller="Home" asp-action="Privacy" style="text-decoration: none;">Política de privacidad</a>
         </div>
+        <div class="container" style="position: absolute; bottom: 0; right: 100px;">
+            redes sociales
+        </div>
+
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
