--- a/MvcTienda_prueba/MvcTienda/Areas/Identity/Pages/Account/Manage/GenerateRecoveryCodes.cshtml
+++ b/MvcTienda_prueba/MvcTienda/Areas/Identity/Pages/Account/Manage/GenerateRecoveryCodes.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model GenerateRecoveryCodesModel
 @{
-    ViewData["Title"] = "Generate two-factor authentication (2FA) recovery codes";
+    ViewData["Title"] = "Generar códigos de recuperación de la autenticación de dos factores (2FA)";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
@@ -13,15 +13,15 @@
         <strong>Put these codes in a safe place.</strong>
     </p>
     <p>
-        If you lose your device and don't have the recovery codes you will lose access to your account.
+        Si pierdes tu dispositivo y no tienes los códigos de recuperación, perderás el acceso a tu cuenta.
     </p>
     <p>
-        Generating new recovery codes does not change the keys used in authenticator apps. If you wish to change the key
-        used in an authenticator app you should <a asp-page="./ResetAuthenticator">reset your authenticator keys.</a>
+        La generación de nuevos códigos de recuperación no modifica las claves utilizadas en las aplicaciones de autenticación. Si desea cambiar la clave
+        utilizada en una aplicación de autenticación debe <a asp-page="./ResetAuthenticator">restablecer las claves de autenticación.</a>
     </p>
 </div>
 <div>
     <form method="post">
-        <button class="btn btn-danger" type="submit">Generate Recovery Codes</button>
+        <button class="btn btn-danger" type="submit">Generar códigos de recuperación</button>
     </form>
 </div>
